Added copyright text.

--- a/copyright_config.yml
+++ b/copyright_config.yml
@@ -4,6 +4,6 @@ license:
 program:
   name: Evaluation-Tseytin
   description: Program for the evaluation of the Tseytin transformation.
-  authors: Elias Kuiter
+  authors: Sebastian Krieter, Elias Kuiter
   url: https://github.com/ekuiter/evaluation-tseytin
   year: 2021
