Inner process for evaluation

--- a/config/config.properties
+++ b/config/config.properties
@@ -1,10 +1,9 @@
 seed=1
-timeout=86400000
+timeout=30000
 verbosity=0
 debug=1
 enableBreaks=0
-# iteration 0 is warmup
-systemIterations=6
+systemIterations=5
 algorithmIterations=1
 append=true
 # 0,0 is pure tseytin and 2147483647,2147483647 is pure distributive
