--- a/config/config.properties
+++ b/config/config.properties
@@ -3,9 +3,9 @@ timeout=30000
 verbosity=0
 debug=1
 enableBreaks=0
-systemIterations=1
+systemIterations=3
 algorithmIterations=1
 append=true
-# 0,0 is pure tseytin and 2147483647,2147483647 is pure distributive
+# 0,*/*,0 is pure tseytin and 2147483647,2147483647 is pure distributive
 maxNum=0,10,100,1000,10000,2147483647
 maxLen=0,2,4,8,16,32,64,128,2147483647
