--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,10 @@
 			<artifactId>formula-analysis</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.spldev</groupId>
+			<artifactId>formula-analysis-javasmt</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
