--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,10 @@
 			<artifactId>formula-analysis-javasmt</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.spldev</groupId>
+			<artifactId>formula-analysis-sharpsat</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
