--- a/config/config.properties
+++ b/config/config.properties
@@ -7,5 +7,5 @@ systemIterations=3
 algorithmIterations=1
 append=true
 # 0,*/*,0 is pure tseytin and 2147483647,2147483647 is pure distributive
-maxNum=10,100,1000,10000,100000,1000000,10000000
-maxLen=2,4,8,16,32,64,128,256,512,1024,2048,4096
+maxNum=0,1,10,100,1000,10000,100000,2147483647
+maxLen=0,1,2,4,8,16,32,64,128,2147483647
