--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,12 @@
 			<artifactId>formula-analysis-sharpsat</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>de.ovgu.featureide.lib</groupId>
+			<artifactId>fm</artifactId>
+			<version>3.6.4</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/ext-libs/de.ovgu.featureide.lib.fm-v3.6.4.jar</systemPath>
+		</dependency>
 	</dependencies>
 </project>
