--- a/config/config.properties
+++ b/config/config.properties
@@ -5,4 +5,4 @@ debug=1
 enableBreaks=0
 systemIterations=3
 append=true
-skipSharpSat=linux,buildroot,embtoolkit,freetz-ng
+#skipSharpSat=linux,buildroot,embtoolkit,freetz-ng
