--- a/pom.xml
+++ b/pom.xml
@@ -47,5 +47,11 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/ext-libs/de.ovgu.featureide.lib.fm-v3.8.0.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>org.spldev</groupId>
+			<artifactId>evaluation</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 </project>
