--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.spldev</groupId>
-			<artifactId>formula-analysis</artifactId>
+			<artifactId>formula-analysis-sat4j</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -46,12 +46,6 @@
 			<version>3.8.0</version>
 			<scope>system</scope>
 			<systemPath>${project.basedir}/ext-libs/de.ovgu.featureide.lib.fm-v3.8.0.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.spldev</groupId>
-			<artifactId>evaluation</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
